fix alignment on IDX properticon

--- a/assets/css/idx-menus.css
+++ b/assets/css/idx-menus.css
@@ -3,13 +3,13 @@
     font-family: 'properticons';
     font-size: 28pt;
     padding-top: 0px;
-    margin-top: -8px;
+    margin-top: -4px;
 }
 #wpadminbar .properticons-logo-idx:before {
     content: '\e021';
     font-family: 'properticons';
     font-size: 36pt;
-    top: -18px;
+    top: -14px;
     vertical-align: top;
 }
 #wp-admin-bar-idx_admin_bar_menu-default .update-plugins {
