--- a/assets/css/idx-shortcode.css
+++ b/assets/css/idx-shortcode.css
@@ -2,7 +2,7 @@
     content: '\e021';
     font-family: 'properticons';
     margin-right: 0.3rem;
-    margin-top: -.45rem;
+    margin-top: -2px;
     font-size: 3rem;
     color: #82878c;
     float: left;
